# js-recon-v2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
Javascript recon app redesign/: .thumbnail  Developer Requirements.dc.html  Extension Popup.dc.html  Recon Workspace.dc.html  Security Engineer Journey.dc.html  Threat Model Orchestration.dc.html
Javascript recon app redesign/archive/: App Review & Gap Analysis.dc.html  Red Team Feasibility Review.dc.html
docs/: req-d3-finding-hash-normalization.md  slice2-deferred-debt.md
docs/superpowers/plans/: 2026-07-22-slice3a-manual-probe-handoff.md  2026-07-22-slice3b-secret-reveal.md  2026-07-23-slice-ui0-recon-workspace.md
docs/superpowers/specs/: 2026-07-22-slice3a-manual-probe-handoff-design.md  2026-07-22-slice3b-secret-reveal-design.md  2026-07-23-slice-ui0-recon-workspace-design.md
src/recon/: __init__.py  bootstrap.py  config.py  conftest.py  domain.py  integration_test.py  observability.py  storage.py
src/recon/api/: app.py  app_test.py  deps.py  findings_router.py  probe_reveal_router_test.py  probe_router.py  probe_router_test.py  runs_router.py  sessions_router.py  sessions_router_test.py  spa_serving_test.py  upload_test.py
src/recon/db/: base.py  models.py  triage_model_test.py
src/recon/events/: log.py  stream.py  stream_test.py
src/recon/fetch/: egress.py  egress_test.py  fetch.py  fetch_test.py  politeness.py  politeness_test.py
src/recon/findings/: __init__.py  analyze.py  analyze_secret_redaction_test.py  analyze_test.py  engines.py  engines_test.py  extract.py  extract_test.py  kingfisher.py  kingfisher_test.py  normalize.py  normalize_test.py  queries.py  queries_reveal_redaction_test.py  queries_test.py  queries_triage_test.py  sourcemapper.py  sourcemapper_test.py  store.py  store_test.py
src/recon/migrations/: env.py
src/recon/probe/: reconstruct.py  reconstruct_run_test.py  reconstruct_test.py  reveal.py  reveal_roundtrip_test.py  reveal_test.py  serialize.py  serialize_test.py  triage.py  triage_test.py
src/recon/progress/: heartbeat.py  heartbeat_test.py
src/recon/queue/: retry.py  retry_test.py  streams.py  streams_test.py
src/recon/runs/: coordinator.py  queries.py  service.py  state_machine.py  state_machine_test.py
src/recon/sessions/: service.py
src/recon/worker/: main.py  main_test.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: app.test.tsx  app.tsx  main.tsx  styles.css
web/src/api/: apiClient.test.ts  apiClient.ts  sseClient.test.ts  sseClient.ts  types.ts
(+18 files in other folders)
