[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recon-platform"
version = "0.1.0"
description = "AppSec JavaScript API-recon platform — async recon pipeline (slice 1: async spine)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "fakeredis>=2.21",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src"]
python_files = ["*_test.py"]
addopts = "-ra -q"
markers = [
    "integration: requires a live Postgres/Redis (spin docker-compose first)",
]

[tool.ruff]
line-length = 100
src = ["src"]
